<resources>
    <string name="app_name">DigiBee</string>
    <color name="yellow">#FCCE47</color>

    <string name="title">This is just a template</string>
    <string name="description">You can compute a factorial using the library-kotlin module. The result will be also shown in a notification using the library-android module.</string>
    <string name="factorial_hint">Insert a number to compute his factorial</string>
    <string name="compute">Compute</string>
    <string name="notification_title">The Result is:</string>
    <string name="discover">Discover</string>
    <string name="dicoverDetails">Discover your customized profile based in your health infographics and habits you like</string>
    <string name="cont">Continue</string>
    <string name="create">Create</string>
    <string name="create_password">Create your personal password</string>


    <string name="createDetails">Create your healthy life style journey under the supervision of our doctors</string>
    <string name="connect">Connect</string>
    <string name="connectDetails">Connect and join interactive communities with the right people in the right place \n\ let\'s start</string>
    <string name="login">Login</string>
    <string name="register_new_user"><u>Register new user</u></string>
    <string name="continue_with_linkedin">Continue with LinkedIn</string>
    <string name="or">OR</string>
    <string name="login_with_email_and_password">Login with email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forgot password?</u></string>
    <string name="register">Register</string>
    <string name="existing_user"><u>Existing user?</u></string>
    <string name="fill_in">Fill in your data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="corporate_email">Corporate Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="depart">Department</string>
    <string name="job_title">Job title</string>
    <string name="step1">Step 1 of 2</string>
    <string name="choose_your_interest">Choose your interest</string>
    <string name="two_selected">2 selected </string>
    <string name="step2">Step 2 of 2</string>
    <string name="follow_activities">Follow activities</string>
    <string name="choose_at_least_three_activities">Choose at least 3 activities</string>
    <string name="what_s_your_next_adventure">What’s your next adventure?</string>
    <string name="hello_david">Hello,\nDavid</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="viewAll">View All</string>
    <string name="popular_activity">Popular Activities</string>
    <string name="popular_events">Popular Events</string>
    <string name="explore_activites">Explore\nActivities</string>
    <string name="explore_events">Explore Events</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>
    <string name="my_feedback">My Feedback</string>
    <string name="profile">Profile</string>
    <string name="total_points">Total Points</string>
    <string name="experiences">Experiences</string>
    <string name="recommendations">Recommendations</string>
    <string name="engaging">Engaging</string>
    <string name="do_it_again">Do it again</string>
    <string name="view_profile">View Profile</string>
    <string name="attendance">Attendance</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="search">Search</string>
    <string name="what_activity_planing">What Activity are you planning</string>
    <string name="tell_us">Tell us your event details</string>
    <string name="event_name">Event name</string>
    <string name="accountant">Accountant</string>
    <string name="description_only">Description</string>
    <string name="details">Details</string>
    <string name="event_date">Event Date</string>
    <string name="choose_date">Choose date</string>
    <string name="attendees">Attendees</string>
    <string name="limited_attendees_invitation_only">Limited attendees (Invitation Only)</string>
    <string name="recurring">Recurring</string>
    <string name="event_location">Event location</string>
    <string name="choose_location">Choose location</string>
    <string name="event_picture">Event Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose_dr">ChooseDrActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="saturday_jan_19_08_00am">Saturday Jan 19, 08:00AM</string>
    <string name="cairo_runners_maadi">Cairo Runners - Maadi</string>
    <string name="going">Going</string>
    <string name="degla_square_maadi">Degla Square, Maadi</string>
    <string name="_20_out_of_30">20 out of 30</string>
    <string name="my_journey">My Journey</string>
    <string name="create_a_habit">Create a habit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="required">Required</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in">Sign in</string>
</resources>